# C-C-_Template

./: .gitignore  CMakeLists.txt  README.md  config.json  main.c
include/: utils.h
src/: utils.c
